# bevy_blender

./: Cargo.toml
assets/: materials.blend
examples/default_materials/: main.rs
examples/material/: main.rs
examples/mesh/: main.rs
examples/object/: main.rs
examples/robot/: main.rs
examples/textures/: main.rs
src/: lib.rs  material.rs  mesh.rs  object.rs
