[package]
name = "bevy_blender"
authors = ["Jerald Thomas <jeraldamo@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "bevy_blender is a Bevy library that allows you to use assets created in Blender directly from a .blend file"
readme = "README.md"
repository = "https://github.com/jeraldamo/bevy_blender"
license = "MIT"
keywords = ["gamedev", "bevy", "blender", "assets"]
categories = ["game-development"]


[dependencies]
blend = ">=0.6.1"
bevy = "0.9.1"
bevy_app = "0.9.1"
bevy_asset = "0.9.1"
bevy_ecs = "0.9.1"
bevy_render = "0.9.1"
bevy_math = "0.9.1"
bevy_utils = "0.9.1"
bevy_pbr = "0.9.1"
bevy_transform = "0.9.1"
anyhow = ">=1.0"
thiserror = ">=1.0"

[dev-dependencies]

[features]
default = []
nightly = []
